Fixes color picker covering content when hidden bug

--- a/app/views/components/color_picker_component/color_picker_component.scss
+++ b/app/views/components/color_picker_component/color_picker_component.scss
@@ -5,13 +5,14 @@
   .swatches {
     top: 4rem;
     opacity: 0;
-    transition: opacity 0.3s ease-in-out;
+    transition: z-index, opacity 0.3s ease-in-out;
     box-shadow: 0 .15em 1.5em #0000001a,0 0 1em #00000008;
     padding: 1rem;
     background: $white;
-    z-index: $zindex-tooltip; // 1080
+    z-index: -1;
     &.show {
       opacity: 1;
+      z-index: $zindex-tooltip; // 1080
     }
     div:last-of-type {
       margin-bottom: 0;
